@@ -15,6 +15,12 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Fixed a regression in scons-3.0.0 where "from __future__ import print_function" was imposed
       on the scope where SConstruct is executed, breaking existing builds using PY 2.7.
 
+  From William Deegan:
+    - Fix broken subst logic where a string with "$$(abc)" was being treated as "$(abc) and the
+      logic for removing the signature escapes was then failing because there was no closing "$)".
+      This was introduced by a pull request to allow recursive variable evaluations to yield a string
+      such as "$( $( some stuff $) $)".
+
 RELEASE 3.0.0 - Mon, 18 Sep 2017 08:32:04 -0700
 
 NOTE: This is a major release.  You should expect that some targets may rebuild when upgrading.
